# school-payment

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
.claude/: settings.json
api-server/: package-lock.json  package.json
api-server/src/: index.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  storage.ts
frontend/src/components/: Calendar.tsx  DatePicker.tsx  RecommendationCard.tsx  SchoolCard.tsx  SchoolForm.tsx  SchoolList.tsx  StatusBadges.tsx  WeeklyRecommendationCard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx
frontend/src/data/: sampleData.ts
frontend/src/hooks/: useRecommendation.ts  useSchools.ts
frontend/src/lib/: date-utils.ts
frontend/src/types/: index.ts
lean-backend/: Main.lean  lake-manifest.json  lakefile.lean  test_runner.sh  test_scenarios.json
lean-backend/src/: SchoolPayment.lean
lean-backend/src/SchoolPayment/: Json.lean  Repl.lean  Rules.lean  Strategy.lean  Types.lean
rust-backend/: Cargo.toml
rust-backend/src/: handlers.rs  json_rpc.rs  lean_repl.rs  lib.rs  storage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
web-server/: Cargo.toml
web-server/src/: main.rs
