[workspace]
resolver = "2"
members = [
    "rust-backend",
    "web-server",
    "src-tauri",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Minoru"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
