[package]
name = "school-payment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "School Payment Advisor - Desktop Application"

[lib]
name = "school_payment_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "school-payment"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rust-backend = { path = "../rust-backend" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
