[package]
name = "web-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
rust-backend = { path = "../rust-backend" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
